Trying to add a JMP section

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Joao Marcos
+first_name: Joao
 middle_name: #R.
 last_name: Garcia
 email: joao_garcia@brown.edu
